@@ -51,12 +51,12 @@
             <option value="by_combo_3.html">3 Targets</option>
             <option value="by_combo_4.html">4 Targets</option>
             <option value="by_combo_5.html">5 Targets</option>
-            <option value="by_combo_0.html">Dungeon</option>
             <option value="by_combo_-1.html">1T Move</option>
+            <option value="by_combo_0.html">Dungeon</option>
           </select>
         </div>
         <div><iframe id="frame2" src="by_combo_1.html" style="border:none; font-family:monospace; font-size:large; width:45ch; height:30em;"></iframe></div>
-        <div style="text-align:center; font-size:larger; margin-top:1em; margin-bottom:0.5em;"><a style="text-decoration:underline;" href="md.html?file=faq.txt" target="simframe" onclick="setTitle('Frequently Asked Questions')"><b>FAQ (Updated September 12th, 2020)</b></a></div>
+        <div style="text-align:center; font-size:larger; margin-top:1em; margin-bottom:0.5em;"><a style="text-decoration:underline;" href="md.html?file=faq.txt" target="simframe" onclick="setTitle('Frequently Asked Questions')"><b>FAQ (Updated September 13th, 2020)</b></a></div>
         <div style="text-align:center; font-size:larger; margin-top:0.5em; margin-bottom:0.5em;"><a style="text-decoration:underline;" href="md.html?file=balance.txt" target="simframe" onclick="setTitle('Balance APL')"><b>Shadowlands BETA Balance APL</b></a></div>
         <div style="text-align:center; font-size:larger; margin-top:0.5em; margin-bottom:1em;"><a style="text-decoration:underline;" href="https://github.com/balance-simc/Balance-SimC/issues/new/choose"><b>Bugs/Improvements/Questions</b></a></div>
         <div id="dir"></div>
