@@ -4,21 +4,51 @@ race=tauren
 role=spell
 spec=balance
 
-chart_show_relative_difference=1
-report_details=0
-max_time=300
+talents=0000000
+
+head=sadists_sinister_mask,id=182980,ilevel=233,gems=16mastery
+shoulder=wicked_flankers_gorget,id=183029,ilevel=233
+chest=miasmalacquered_jerkin,id=183009,ilevel=226
+neck=charm_of_eternal_winter,id=183040,ilevel=226,gems=16mastery
+back=cowled_batwing_cloak,id=183034,ilevel=226
+wrists=precisely_calibrated_chronometer,id=183019,ilevel=226,gems=16mastery
+hands=gloves_of_phantom_shadows,id=183026,ilevel=226
+waist=heedless_pugilists_harness,id=183005,ilevel=226,gems=16mastery
+legs=volatile_shadestitch_legguards,id=183024,ilevel=226
+feet=enchanted_toetappers,id=183030,ilevel=226
+finger1=most_regal_signet_of_sire_denathrius,id=183036,ilevel=233,gems=16mastery
+finger2=hyperlight_band,id=183038,ilevel=226,gems=16mastery
+main_hand=sinbearers_absolution_staff,id=182418,ilevel=233,enchant=celestial_guidance
+
+#chest=corset_of_the_deft_duelist,id=182989,ilevel=226
+#neck=nobles_birthstone_pendant,id=183039,ilevel=226,gems=16mastery
+#back=crest_of_the_legionnaire_general,id=183032,ilevel=233
+#back=mantle_of_manifest_sins,id=183033,ilevel=226
+#hands=bleakwing_assassins_grips,id=183007,ilevel=226
+#waist=spell_woventourniquet,id=182995,ilevel=226,gems=16mastery
+#legs=chiropteran_leggings,id=182993,ilevel=226
+#finger1=ritualists_treasured_ring,id=183037,ilevel=226,gems=16mastery
+
+#placeholders
+trinket1=,id=180117,ilevel=226
+trinket2=,id=178772,ilevel=226
+#trinket1=,id=180119,ilevel=226
+#trinket1=,id=178849,ilevel=226
+#trinket1=,id=178783,ilevel=226
+#trinket1=,id=178769,ilevel=226
+#trinket1=,id=178826,ilevel=226
+#trinket1=,id=179350,ilevel=226
+#trinket1=,id=178810,ilevel=226
+#trinket1=,id=178809,ilevel=226
 
 tabard=,id=31405
-shirt=,id=6833,enchant=celestial_guidance
-
-gear_intellect=1500
-gear_crit_rating=350
-gear_haste_rating=350
-gear_mastery_rating=700
-gear_versatility_rating=175
 
 soulbind=evolved_swarm:1/conflux_of_elements:1/endless_thirst:1/fury_of_the_skies:1/precise_alignment:1
 
 potion=spectral_intellect
 flask=spectral_flask_of_power
 food=feast_of_gluttonous_hedonism
+
+chart_show_relative_difference=1
+report_details=0
+max_time=300
